--- a/src/main/java/com/devteam/school/views/AppFrame.form
+++ b/src/main/java/com/devteam/school/views/AppFrame.form
@@ -68,6 +68,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Alumnos"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseReleased" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jButton2MouseReleased"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jButton3">
       <Properties>
