--- a/src/main/java/com/devteam/school/views/CursoFrame.form
+++ b/src/main/java/com/devteam/school/views/CursoFrame.form
@@ -137,7 +137,7 @@
                       <Component id="jLabel8" alignment="2" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="47" max="-2" attributes="0"/>
-                  <Component id="jLabel4" min="-2" pref="36" max="-2" attributes="0"/>
+                  <Component id="jLabel4" min="-2" pref="26" max="-2" attributes="0"/>
                   <EmptySpace max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jbGuardar" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -239,6 +239,9 @@
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="0" green="b3" red="ff" type="rgb"/>
+            </Property>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/images/ballon.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="A&#xf1;ada un curso solo al INICIO del A&#xf1;o escolar, CUIDADO!!"/>
             <Property name="opaque" type="boolean" value="true"/>
