--- a/src/main/java/com/devteam/school/views/LlenarNotasFrame.form
+++ b/src/main/java/com/devteam/school/views/LlenarNotasFrame.form
@@ -66,7 +66,7 @@
       <Properties>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-            <TitledBorder title="DATOS DE MATR&#xcd;CULA"/>
+            <TitledBorder title="DATOS"/>
           </Border>
         </Property>
       </Properties>
@@ -216,7 +216,7 @@
       <Properties>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-            <TitledBorder title="NOTAS ANTERIORES"/>
+            <TitledBorder title="NOTAS"/>
           </Border>
         </Property>
       </Properties>
